--- a/src/sass/theme.scss
+++ b/src/sass/theme.scss
@@ -1,5 +1,6 @@
 @use "utilities/colors" as *;
 @use "utilities/mixins" as m;
+@use "utilities/metrics"as metric;
 @use "sass:color";
 
 @mixin light {
@@ -27,21 +28,21 @@
 }
 
 @mixin reducedMotion {
-  --transition-s : 0.1s;
-  --transition-m : 0.25s;
-  --transition-l : 0.4s;
-  --transition-x : 0.6s;
-  --transition-xx: 1s;
+  --tx-s : #{ metric.$ts };
+  --tx-m : #{ metric.$tm };
+  --tx-l : #{ metric.$tl };
+  --tx-x : #{ metric.$tx };
+  --tx-xx: #{ metric.$txx };
 
   --interactive-feedback: translateY(-.075em) scale(1.01);
 
 
   @media (prefers-reduced-motion: reduce) {
-  --transition-s : 0s;
-  --transition-m : 0s;
-  --transition-l : 0s;
-  --transition-x : 0s;
-  --transition-xx: 0s;
+  --tx-s : 0s;
+  --tx-m : 0s;
+  --tx-l : 0s;
+  --tx-x : 0s;
+  --tx-xx: 0s;
 
     --interactive-feedback: translateY(0) scale(1);
     }
