--- a/src/sass/utilities/_colors.scss
+++ b/src/sass/utilities/_colors.scss
@@ -2,49 +2,42 @@
 // @use "sass:map";
 // @use "sass:string";
 
-//named colors
-$sst-orange: #FF5308;
+// named colors
+$white : #fff;
+$black : #000;
 
-$gray-00    : #fafafa;
-$gray-02    : #f7f7f7;
-$gray-05    : #ededed;
-$gray-10    : #e5e5e5;
-$gray-15    : #d9d9d9;
-$gray-20    : #c2c2c2;
-$gray-30    : #a9a9a9;
-$gray-40    : #959595;
-$gray-50    : #757575;
-$gray-60    : #686868;
-$gray-70    : #565656;
-$gray-80    : #3f3f3f;
-$gray-90    : #2e2e2e;
-$gray-100   : #1d1d1d;
+$gray-00 : #fafafa;
+$gray-05 : #f2f2f2;
+$gray-10 : #e5e5e5;
+$gray-20: #c5c5c5;
+$gray-30: #a5a5a5;
+$gray-40: #858585;
+$gray-60: #656565;
+$gray-80: #454545;
+$gray-100: #252525;
 
-$white      : #ffffff;
-$black      : #000000;
+$cta: #658A29;
+$cta-hover: #739D2F;
+$cta-active: #567623;
 
-$primary-40  : #E56D39;
-$primary-50  : #DF4907;
-$primary-60  : #B23A06;
+$error: #E23100;
+$error-hover: #F93B06;
+$error-active: #C72F05;
 
-$success-40 : #28BD3B;
-$success-50 : #29A039;
-$success-60 : #288234;
+$warning: #E2A900;
+$warning-hover: #F9BC06;
+$warning-active: #C79605;
 
-$error-40   : #F32828;
-$error-50   : #EB0000;
-$error-60   : #BF1313;
+$success: #63C41E;
+$success-hover: #72D22D;
+$success-active: #5AAD1F;
 
-$warning-30 : #FBBD08;
-$warning-40 : #D9A715;
-$warning-50 : #B7901E;
+$info: #1E7CC4;
+$info-hover: #0690F9;
+$info-active: #296EA3;
 
-$info-30    : #559CFF;
-$info-40    : #2981FA;
-$info-50    : #0066F4;
-$info-60    : #145EC6;
 
-$focus      : #1d9bf0;
+$focus      : #003f98;
 
 
 @function toRGB($color) {
