--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -62,6 +62,11 @@ li {
   margin-bottom: .35em;
 }
 
+select {
+  display: flex;
+  width: 100%;
+}
+
 /* utilities */
 .-noScroll {
   height: 100vh;
