added wrapper class. fixed input, select, range sizing issues.

--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -68,3 +68,10 @@ li {
   width: 100vw;
   overflow: clip;
 }
+
+.wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
